tests/samples/negative/types/bcast_i64_to_struct.ax
module bcast_i64_to_struct;

struct Pair {
  lo: i32;
  hi: i32;
}

fn main() -> i32 {
  let bits: i64 = 1;
  let pair: Pair = bcast(Pair, bits);
  return pair.lo;
}
